=== 2.5.10 / 2010-08-17

* Minor Enhancements
  * Support rb_singleton_class().  Reported by Jeremy Evans.

* Bug Fixes
  * Treat non-ASCII RDoc files as text.  Bug #28391 by Kouhei Sutou.
  * Fix potential test failures due to ivar collision.  Bug #28390 by Kouhei
    Sutou.
  * Added duck-typed #aref for RDoc::Attr to RDoc::AnyMethod.  Bug #28375 by
    Erik Hollensbe
  * Fixed method references in HTML output when show_hash is false.

=== 2.5.9 / 2010-07-06

* Bug Fixes
  * Look up pager correctly.
  * Fixed handling of bullets in verbatim sections.  Partial patch by
    Juha-Jarmo Heinonen.

=== 2.5.8 / 2010-04-27

*NOTE*:

RDoc 2.5 did not save method parameters, so you should upgrade your rdoc-data
gem to a version >= 2.5.3.

To have ri data for core and stdlib you'll need to:

  gem install rdoc-data

then run:

  rdoc-data --install

To have ri data for you gems you'll also need to run:

  gem rdoc --all --overwrite

If you don't want to rebuild the rdoc for `gem server`, add --no-rdoc.

* Bug Fixes
  * ri no longer complains about nonexistent pagers.
  * Fixed failing test

=== 2.5.7 / 2010-04-22

* Minor Enhancements
  * Unrecognized RDoc directives can now be registered by a plugin for
    handling.  See RDoc::Markup::PreProcess.
  * Added RDoc::Markup::Raw to allow other markup engines to dump raw content
    into RDoc.
* Bug Fixes
  * rdoc -p no longer means --pipe if files are also given.
  * RDoc now knows about BasicObject by default.  Ruby Bug #1318 by Ambrus Zsbán

=== 2.5.6 / 2010-04-22

* Minor Enhancements
  * Unrecognized RDoc directives are added as metadata to the object they get
    attached to.

      ##
      # :my_new_directive: my cool value

    Results in a 'my_new_directive' metadata key with value 'my cool value' on
    the RDoc::CodeObject it is for
* Bug Fixes
  * RDoc no longer prints out "invalid options:" when there were no invalid
    options.
  * Fixed link size on Darkfish file pages

=== 2.5.5 / 2010-04-19
