@@ -509,6 +509,36 @@ Init_IO(void) {
     assert_equal "Method Comment!   ", read_method.comment
   end
 
+  def test_define_method_private_singleton
+    content = <<-EOF
+/*Method Comment! */
+static VALUE
+rb_io_s_read(argc, argv, io)
+    int argc;
+    VALUE *argv;
+    VALUE io;
+{
+}
+
+void
+Init_IO(void) {
+    /*
+     * a comment for class Foo on rb_define_class
+     */
+    VALUE rb_cIO = rb_define_class("IO", rb_cObject);
+    VALUE rb_cIO_s = rb_singleton_class(rb_cIO);
+    rb_define_private_method(rb_cIO_s, "read", rb_io_s_read, -1);
+}
+    EOF
+
+    klass = util_get_class content, 'rb_cIO'
+    read_method = klass.method_list.first
+    assert_equal "read", read_method.name
+    assert_equal "Method Comment!   ", read_method.comment
+    assert_equal :private, read_method.visibility
+    assert read_method.singleton
+  end
+
   def test_define_method_singleton
     content = <<-EOF
 /*Method Comment! */
@@ -527,7 +557,7 @@ Init_IO(void) {
      */
     VALUE rb_cIO = rb_define_class("IO", rb_cObject);
     VALUE rb_cIO_s = rb_singleton_class(rb_cIO);
-    rb_define_singleton_method(rb_cIO_s, "read", rb_io_s_read, -1);
+    rb_define_method(rb_cIO_s, "read", rb_io_s_read, -1);
 }
     EOF
 
